fix: improving texts contrast levels

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -10,17 +10,11 @@
   padding: 24px 20px;
 }
 
-.nav a {
-  color: #8257e5;
-}
-
 .content {
   max-width: 776px;
   width: 100%;
   margin: 0 auto;
   padding: 24px 20px;
-
-  color: #555;
 }
 
 .content h2 {
@@ -29,4 +23,21 @@
 
 .content p {
   margin: 20px 0;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  max-width: 1064px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.footer a {
+  padding: 1rem 2rem;
+  background: #202024;
+  border-radius: 5px;
+  color: #996dff;
 }
